Add temporary Markdown to html parsing for Articles.

--- a/test/index.html
+++ b/test/index.html
@@ -6,6 +6,7 @@
         <!--UNCOMMENT THESE AND COMMENT OUT ABOVE IF YOU WANT NON-REQUIRE-->
         <!--script(src="js/jquery-1.11.0.js")-->
         <!--script(src="js/Uri.js")-->
+        <!--script(src="js/js-markdown-extra.js")-->
         <!--script(src="../strata.js")-->
     </head>
     <body>
